--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,8 @@
     <title>React App</title>
   </head>
   <body>
+    
+    <p>GET MERGED!</p>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     
