--- a/public/index.html
+++ b/public/index.html
@@ -13,11 +13,12 @@
    
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   
-    <title>React App</title>
+    <title>Beastmaster 48-Hour Project</title>
   </head>
   <body>
     
     <p>GET MERGED!</p>
+    <p>On the verge of a merge.</p>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     
