--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
   <body>
     
     <p>GET MERGED!</p>
+    <h3>Sarahs Branch</h3>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     
