--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
    
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   
@@ -17,8 +17,6 @@
   </head>
   <body>
     
-    <p>GET MERGED!</p>
-    <p>On the verge of a merge.</p>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     
